--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.03MB/s(Youtube:不良林), server: 116.129.254.192, port: 16251, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-643.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.08MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-792.5KB/s(Youtube:不良林), server: 120.241.236.215, port: 16213, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-165.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.40MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-360.0KB/s(Youtube:不良林), server: supersouth.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supersouth.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 未知国家-2.40MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇳 中国-3.98MB/s(Youtube:不良林), server: 120.241.236.113, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.07MB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-596.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-657.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-1.19MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-362.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.81MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-431.9KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-3.70MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-643.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-792.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-165.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-360.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 未知国家-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-596.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-657.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-431.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-643.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-792.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-165.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-360.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 未知国家-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-596.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-657.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-431.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-643.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-792.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-165.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-360.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 未知国家-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-596.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-657.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-431.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-643.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-792.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-165.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-360.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 未知国家-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-596.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-657.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-431.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-643.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-792.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-165.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-360.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 未知国家-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-596.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-657.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-431.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-643.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-792.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-165.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-360.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 未知国家-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-596.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-657.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-431.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-643.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-792.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-165.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-360.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 未知国家-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-596.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-657.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-431.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.70MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
