--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.62MB/s(Youtube:不良林), server: 116.129.254.192, port: 16106, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-637.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.47MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-859.8KB/s(Youtube:不良林), server: 104.129.63.65, port: 8443, type: trojan, password: cUDgjDkSfn, skip-cert-verify: true}
-  - {name: 🇨🇦 (已存活1天)加拿大-1.39MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇳 台湾-1.71MB/s(Youtube:不良林), server: 724tw01.ok365.cyou, port: 443, type: trojan, password: 6a582cd4-559f-4874-98e7-76f3465412ae, sni: 724tw01.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-667.6KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-3.43MB/s(Youtube:不良林), server: 120.241.236.215, port: 16213, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.00MB/s(Youtube:不良林), server: 116.129.254.192, port: 16251, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-672.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-381.3KB/s(Youtube:不良林), server: 116.129.254.192, port: 16225, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.45MB/s(Youtube:不良林), server: 120.241.236.113, port: 16113, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.26MB/s(Youtube:不良林), server: 120.241.236.215, port: 16115, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.59MB/s(Youtube:不良林), server: 120.241.236.215, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-797.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.75MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-637.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-859.8KB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-667.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-637.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-859.8KB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-667.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-637.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-859.8KB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-667.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.71MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-637.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-859.8KB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-667.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-637.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-859.8KB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-667.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-637.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-859.8KB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-667.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-637.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-859.8KB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-667.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-381.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
