--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.58MB/s(Youtube:不良林), server: 116.129.254.192, port: 16296, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.43MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-859.8KB/s(Youtube:不良林), server: 104.129.63.65, port: 8443, type: trojan, password: cUDgjDkSfn, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.24MB/s(Youtube:不良林), server: jp2.autlinzh.xyz, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp2.autlinzh.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.15MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
+  - {name: 🇨🇦 加拿大-2.02MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-621.9KB/s(Youtube:不良林), server: 116.129.254.192, port: 16264, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.23MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-1.45MB/s(Youtube:不良林), server: 120.241.236.113, port: 16113, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.26MB/s(Youtube:不良林), server: 120.241.236.215, port: 16115, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.59MB/s(Youtube:不良林), server: 120.241.236.215, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-797.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.75MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.28MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.67MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-710.4KB/s(Youtube:不良林), server: 724tw01.ok365.cyou, port: 443, type: trojan, password: 6a582cd4-559f-4874-98e7-76f3465412ae, sni: 724tw01.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.17MB/s(Youtube:不良林), server: 120.241.236.215, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.71MB/s(Youtube:不良林), server: 120.241.236.113, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-859.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-621.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-710.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-859.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-621.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-710.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-859.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-621.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-710.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-710.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-859.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-621.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-710.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-859.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-621.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-710.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-859.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-621.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-710.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-859.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-621.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-710.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
